--- a/frontend_site/gui/package.json
+++ b/frontend_site/gui/package.json
@@ -11,9 +11,12 @@
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.11.0",
     "react-google-maps": "^9.4.5",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-transition-group": "^4.3.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "video-react": "^0.14.1"
   },
   "scripts": {
