--- a/frontend_site/gui/package.json
+++ b/frontend_site/gui/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "chart.js": "^2.9.1",
     "node-sass": "^4.12.0",
+    "qrcode.react": "^1.0.0",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-chartjs-2": "^2.8.0",
