--- a/frontend_site/gui/package.json
+++ b/frontend_site/gui/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "chart.js": "^2.9.1",
+    "email-validator": "^2.0.4",
+    "formik": "^2.0.6",
     "node-sass": "^4.12.0",
     "qrcode.react": "^1.0.0",
     "react": "^16.11.0",
@@ -18,7 +20,8 @@
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "video-react": "^0.14.1"
+    "video-react": "^0.14.1",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
