--- a/frontend_site/gui/package.json
+++ b/frontend_site/gui/package.json
@@ -14,6 +14,7 @@
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.11.0",
     "react-google-maps": "^9.4.5",
+    "react-messenger-customer-chat": "^0.7.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
